@@ -1,6 +1,0 @@
-/* $Id: version.c,v 1.6 2001/11/29 09:34:15 ukai Exp $ */
-#define CURRENT_VERSION "w3m/0.2.2"
-
-#ifndef FM_H
-char *w3m_version = CURRENT_VERSION;
-#endif				/* not FM_H */
