@@ -1,3 +1,11 @@
+2001-12-08  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 02641]
+	* configure: generate version.c from version.c.in
+	* version.c.in: added
+	* version.c: deleted, autogenerated from version.c.in
+	* .cvsignore (version.c): added
+
 2001-12-07  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 02642]
@@ -1091,4 +1099,4 @@
 	* release-0-2-1
 	* import w3m-0.2.1
 
-$Id: ChangeLog,v 1.115 2001/12/07 08:04:53 ukai Exp $
+$Id: ChangeLog,v 1.116 2001/12/07 19:50:37 ukai Exp $
